--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "isobar"]
+	path = isobar
+	url = https://github.com/fbreitwieser/isobar
+	shallow = true
+	registered = true
